@startuml

title __MANDELBROT's Class Diagram__\n

  namespace fractals {
    namespace Mandelbrot {
      interface fractals.Mandelbrot.IProcessingApp {
          {abstract} + draw()
          {abstract} + keyPressed()
          {abstract} + mouseDragged()
          {abstract} + mousePressed()
          {abstract} + mouseReleased()
          {abstract} + setup()
      }
    }
  }
  

  namespace fractals {
    namespace Mandelbrot {
      class fractals.Mandelbrot.MandelbrotApp {
          - mx0 : int
          - mx1 : int
          - my0 : int
          - my1 : int
          - viewport : float[]
          - window : double[]
          + draw()
          + keyPressed()
          + mouseDragged()
          + mousePressed()
          + mouseReleased()
          + setup()
          - displayNewWindow()
      }
    }
  }
  

  namespace fractals {
    namespace Mandelbrot {
      class fractals.Mandelbrot.MandelbrotSet {
          - dimx : int
          - dimy : int
          - niter : int
          - x0 : int
          - y0 : int
          + MandelbrotSet()
          + display()
      }
    }
  }
  

  namespace fractals {
    namespace Mandelbrot {
      class fractals.Mandelbrot.ProcessingSetup {
          {static} - app : IProcessingApp
          - lastUpdateTime : float
          + draw()
          + keyPressed()
          {static} + main()
          + mouseDragged()
          + mousePressed()
          + mouseReleased()
          + settings()
          + setup()
      }
    }
  }
  

  fractals.Mandelbrot.MandelbrotApp .up.|> fractals.Mandelbrot.IProcessingApp
  fractals.Mandelbrot.MandelbrotApp o-- fractals.Mandelbrot.MandelbrotSet : ms
  fractals.Mandelbrot.MandelbrotApp o-- tools.SubPlot : plt
  fractals.Mandelbrot.ProcessingSetup -up-|> processing.core.PApplet


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
